--- a/form.html
+++ b/form.html
@@ -1,71 +1,74 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <style>
-    .form{
-       
-        padding: 20px; 
-        max-width: 400px; 
-        margin: 0 auto;
-    }
-    .main{
-        margin: 8px;
-        padding:10px;
-    }
-    h3{
-        margin:0 auto;
-        width: 20%;
-        padding: 20px;
-    }
-    .form2{
-        padding: 20px; 
-        max-width: 400px; 
-        margin: 0 auto;
-    }
-    .submit{
-        padding: 10px; 
-        max-width: 400px; 
-        margin: 0 auto;
-    }
+        .first {
+            margin-top: 40px;
+            margin-left: 30%;
+            margin-right: 30%;
+            background-color:#F5FBFF;
+        }
+        .second {
+            padding: 10px; 
+        }
+        .third {
+            padding: 10px; 
+        }
+        h3 {
+            margin-top: 3%;
+            margin-left: 35%;
+        }
+        label {
+            margin-bottom: 5px; 
+        }
     </style>
-    <body>
-       <h3>Fill the below information properly</h3>
-        <form class="form">
+</head>
+<body>
+    <h3>Fill the below information properly</h3>
+    <div class="first">
+        <form>
             <fieldset>
-        <legend> Personal Information </legend>
-            <div class="main">
-                <div>Name: <input type="text" name="name" placeholder="Your name"></div> <br>
-                <div>Course: <input type="text" name="course" placeholder="Your course"></div> <br>
-                <div>Email: <input type="email" name="myemail" placeholder="Your email"></div> <br>
-                <div>DOB: <input type="date" name="DOB"></div> <br>
-                <div>Are You Eligible:<input type="checkbox" ></div><br> <!--by writing checked after checkbox it will be always default checked-->
-                <div> Gender:male<input type="radio" name="mygender"> 
-                  female <input type="radio" name="mygender">
-                  other <input type="radio" name="mygender"></div><br>
-                  <div>Phone Number:<input type="number"></div>
-        </div>
-    </fieldset>
-        </form><br>
-        <form class="form2">
-            <fieldset>
-                <legend>Basic Information</legend>
-            <div class="main">
-                <div>
-                    Interests:Books<input type="checkbox" > Movies<input type="checkbox" >VideoGames<input type="checkbox" >
-                </div><br>
-                <div>
-                    <label for="favorite-color">Favorite Color:</label>  
-              <select id="favorite-color" name="favorite-color">
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-            <option value="yellow">Yellow</option>
-            <option value="orange">Orange</option>
-            <option value="orange">Other</option>
-        </select>
+                <div class="second">
+                    <fieldset>
+                        <legend>Personal Information</legend><br>
+                        Full name:
+                        <input type="text" name="fname" placeholder="Your name"><br><br>
+                        Birth Date
+                        <input type="date" name="DOB"><br><br>
+                        Gender:
+                        <input type="radio" name="Gender">
+                        Male
+                        <input type="radio" name="Gender">
+                        Female<br><br>
+                        Address:
+                        <textarea name="add" cols="15" rows="1"></textarea><br><br>
+                        Phone Number:
+                        <input type="number" name="num"><br><br>
+                    </fieldset>
                 </div>
-            </div>
-        </fieldset>
+                
+                <div class="third">
+                    <fieldset>
+                        <legend>Extra Information</legend><br>
+                        Interests:
+                        <input type="checkbox" name="Interests">
+                        Books
+                        <input type="checkbox" name="Interests">
+                        Movies
+                        <input type="checkbox" name="Interests">
+                        VideoGames<br><br>
+                        Favorite color:
+                        <input type="color" name="favcolor" value="#ff0000"><br><br>
+                    </fieldset>
+                </div>
+                <br>
+                <input style="margin-left: 17px; margin-right: 5px;" type="reset">
+                <input type="submit" value="Send Data">
+            </fieldset>
         </form>
-        <div class="submit"><input type="submit" value="submit now"> </div>
-      <div class="submit"> <input type="reset" value="reset"></div><br>
-    </body>
+    </div>
+</body>
 </html>
